code updated 1.55pm

--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@
     </section>
     <div>
 
-      <header hx-get="nav.html" hx-trigger="load" hx-swap="outerHTML"></header>
+      <header data-include="nav.html"></header>
     <main>
         <h1>Welcome to GVPCDPGC</h1>
         <p>This is the home page.</p>
