--- a/templates/nav.html
+++ b/templates/nav.html
@@ -19,7 +19,7 @@
     }
     .nav1{
         width: 100%;
-        height: 28px;
+        height: 28px * 100%;
         background-color: #22316C;
         display: flex;
         justify-content: space-between;
@@ -111,6 +111,12 @@
         .material-symbols-outline{
             margin-top: 20px;
         }
+    @media only screen and (max-width:1235px){
+        .title h1,p{
+            font-size: small;
+        }
+    }
+
 </style>
 <nav>
     <!-- Your navigation content here -->
@@ -138,7 +144,7 @@
                 <img src="../assects/gvplogorm.png" alt="gayatri_logo" width="110px">
             </div>
             <div class="title" >
-                <h1 style="font-size: 26px;">GAYATRI VIDYA PARISHAD <br/>
+                <h1 style="font-size: 26px * 100%;">GAYATRI VIDYA PARISHAD <br/>
                 COLLEGE FOR DEGREE AND PG COURSES (AUTONOMOUS)</h1><P class="para">
                 Affiliated to Andhra University | Reaccredited by NAAC<br>
                 PG-MBA and UG Engineering B.Tech(CE,CSE,ECE and ME) programs are Accredited by NBA
