--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,8 @@
-<footer>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Footer Only</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;700&display=swap">
         <style>
@@ -87,4 +87,4 @@
             </div>
         </div>
     </body>
-</footer>
+</html>
