--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<footer>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Footer Only</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;700&display=swap">
         <style>
@@ -38,6 +38,11 @@
             .footer a {
                 text-decoration: none;
                 color: #ff4c4c;
+                transition: color 0.3s, text-decoration 0.3s;
+            }
+            .footer a:hover {
+                color: #ffdfdf;
+                text-decoration: underline;
             }
             .footer p {
                 margin: 5px 0;
@@ -57,7 +62,7 @@
         <div class="footer">
             <div class="logo-container">
                 <img src="https://www.gvpcdpgc.edu.in/gvplogo.jpg" alt="College Logo">
-                <p>Gayatri Vidya Parishad College for Degree and PG Courses (Autonomous)</p>
+                <p>Gayatri Vidya Parishad College <br>for Degree and PG Courses (Autonomous),<br>Rushikonda, Visakhapatnam - 530045, Andhra Pradesh</p>
             </div>
             <div>
                 <p>Quick Links:</p>
@@ -87,4 +92,4 @@
             </div>
         </div>
     </body>
-</html>
+</footer>
