hod page updated

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -78,7 +78,7 @@
             </div>
             <div>
                 <p>GET IN TOUCH:</p>
-                <p>Email: <a href="mailto:principalgvpcdpgca@gmail.com">principalgvpcdpgca@gmail.com</a></p>
+                <p>Email: <a href="mailto:principalgvpcdpgc.edu.in">principalgvpcdpgca@gmail.com</a></p>
                 <p>Phone: 0891-2955084</p>
                 <p>Working Hours: Mon-Sat 10:00 AM - 5:00PM</p>
                 <p>Follow Us:</p>
