--- a/templates/nav1.html
+++ b/templates/nav1.html
@@ -44,6 +44,7 @@
             font-size: small;
             text-decoration: none;
             padding-left: 10%;
+            color: #fff;
         }
         
         .title h1, .para {
@@ -53,7 +54,10 @@
                 -1px -1px 0 #000,
                 1px -1px 0 #000;
         }
-
+        .codes p{
+            font-size: 20px;
+            font-weight: bolder;
+        }
         /* Main nav styles */
         
         .main-nav {
@@ -137,9 +141,13 @@
         }
 
         @media only screen and (max-width: 1235px) {
-            .title h1, p {
+            .title h1, .title p,.codes p {
                 font-size: small;
             }
+            .main-nav > ul {
+            display: ruby;
+            }
+
         }
     </style>
 </head>
@@ -178,7 +186,7 @@
             </div>
             <div>
                 <div class="codes">
-                    <p style="font-size: 20px;font-weight: bolder;">
+                    <p>
                         AUCET CODE <span> - 112</span><br>
                         ICET CODE <span>- GVPP</span><br>
                         PGCET CODE <span>- GVPT1</span><br>
@@ -265,35 +273,6 @@
             }
         });
     </script>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores voluptatum beatae natus in aperiam, enim omnis veritatis! Consectetur consequatur laudantium illum officiis nam ducimus tempora? Illum ullam ipsam provident asperiores!
-    Dicta harum quos at, non commodi eveniet rem velit alias libero, assumenda itaque cum aliquid possimus porro praesentium culpa inventore voluptate earum minus voluptas ab sunt ducimus fuga. Nemo, natus.
-    Iure sit excepturi veniam veritatis repellendus facilis perferendis accusantium vel maiores non ratione velit minima ex, mollitia voluptate quam quia nobis possimus fugiat reprehenderit rerum cumque iusto. Id, quae quod?
-    Dolor, a? Eos exercitationem cumque natus. Perspiciatis, omnis debitis? Amet impedit dolorum, expedita velit, libero modi pariatur sequi ad natus fuga eum molestiae sunt dignissimos voluptatum iure enim porro accusantium?
-    Aut ipsa pariatur eaque odit nisi quam, ut nobis laborum sit corrupti voluptatem possimus repudiandae magnam, minima exercitationem. Praesentium dolorem voluptas voluptatum odio quidem nemo explicabo facilis quod dolorum hic?
-    Qui mollitia omnis, voluptatem libero id veritatis blanditiis quisquam enim eaque ratione inventore dolorem dolore dicta? Aliquam alias, qui hic, nobis, maxime minus quas obcaecati quae corporis totam porro eius.
-    Asperiores corrupti accusamus similique laudantium esse, deleniti minus repellat, ut commodi fuga iste porro, quasi nulla. Ipsa, deserunt facere. Placeat quis nobis harum mollitia nemo! Pariatur fugit repellendus adipisci dignissimos.
-    Animi dolorem aut ullam tempore! Repellendus dicta eos illo distinctio! Quisquam blanditiis culpa officia beatae excepturi consectetur fuga iste ducimus! Sunt officia quo autem sequi, earum praesentium placeat minus sed.
-    Amet, consequuntur eius aliquam deserunt ad facere animi corporis! Ex incidunt magni laudantium quos consequuntur non soluta cupiditate alias quaerat, earum quis culpa, aliquam, corrupti iste dolorum dolorem libero? In.
-    Et in ipsam ab quisquam. Explicabo quasi, maxime veritatis natus pariatur consequuntur totam rerum ratione hic error, ut culpa odio perspiciatis. In doloribus ab vero corporis ducimus quae recusandae quisquam!
-    In possimus ipsa unde doloribus inventore quam, ab voluptates ut, modi mollitia molestiae veritatis ullam dolorem reiciendis reprehenderit incidunt a quia, expedita pariatur quisquam aperiam rerum eum odit! Aperiam, fuga!
-    Fuga velit consectetur corrupti laudantium deserunt, optio dolorem molestias odio, blanditiis quos voluptas ad dignissimos nisi minus, nostrum ea voluptatum ducimus exercitationem officia ratione facilis possimus quam dolores eos? Beatae.
-    Nemo, reiciendis ea. Adipisci atque, quis quod aliquam cumque veritatis officia temporibus similique reprehenderit sequi asperiores odit nobis! Deserunt, debitis repellat quaerat reprehenderit a eum eius. Labore omnis illo neque.
-    Voluptates soluta aliquam dolorem, dolores unde laboriosam, veniam a eaque excepturi repellat, itaque cum facere? Tenetur, omnis impedit. Id nostrum saepe delectus explicabo odio, quasi quibusdam dicta animi velit quam.
-    Animi, amet iure hic laborum harum delectus, minima omnis quae et labore praesentium ex expedita ipsam veritatis dolorem consequatur! Unde ducimus culpa laudantium tenetur voluptate praesentium animi id velit qui.
-    Veniam blanditiis delectus voluptatum officia aut ullam facilis suscipit eos consequuntur! At dolorum iste laborum rerum pariatur rem sit minima odio, magni repellat nesciunt molestias excepturi eveniet deleniti quae quaerat!
-    Deserunt dicta libero veritatis beatae! Necessitatibus molestias officiis rerum, provident nulla at et expedita temporibus commodi facilis totam corporis esse. Reprehenderit sapiente veritatis odio quos non neque error, quaerat earum.
-    Quasi, fugiat. Nobis voluptates, corporis quasi cumque facere culpa impedit perferendis error tempora et voluptatem vitae eum blanditiis pariatur commodi quam! Laborum quaerat, quia harum accusantium expedita quasi suscipit nobis.
-    Libero eos deleniti sed! Modi ducimus blanditiis omnis vel at est veritatis nobis iure incidunt ut voluptatibus vitae autem beatae ratione sapiente esse tempora cumque quam, fugit tenetur deserunt! Nemo.
-    Ipsum assumenda excepturi ipsam eaque rem, magnam esse dolorum, hic quidem alias officiis maiores et ea ratione repellendus facere voluptatum. Consequatur illo porro sapiente, unde distinctio perferendis harum quam dolore.
-    Velit deleniti corrupti voluptates, consectetur quis pariatur dolore, facere error eos blanditiis ullam et ab! Veritatis corrupti commodi nemo ea magnam ratione quam! Nobis ea numquam hic repellat aut voluptates.
-    Sequi fugit iusto, culpa voluptatem, praesentium impedit laborum blanditiis hic ducimus harum porro sint mollitia aspernatur numquam saepe labore voluptatibus, similique delectus debitis sed dolor fuga! Natus animi harum a?
-    Ad quidem, dicta corrupti saepe porro soluta blanditiis. Unde necessitatibus vero accusantium consequuntur vel? Ipsum, explicabo, at soluta aut, pariatur ducimus modi vel illum non sequi voluptatem? Sint, necessitatibus enim.
-    Ducimus, iste voluptas optio tempora sint aut nesciunt facere quod dignissimos quisquam numquam tenetur maxime natus accusamus soluta deleniti illo itaque eos deserunt. Quam natus rem et. Atque, facere tempore.
-    Error, illum incidunt! Architecto, delectus. Facere quisquam veritatis recusandae. Atque repellat aliquam maiores quo! Rerum, cupiditate doloremque eligendi dignissimos asperiores, aliquid alias pariatur vero quibusdam enim, quam consectetur sunt velit.
-    Voluptate, explicabo cum! Labore, quaerat impedit aliquam eius molestias autem at perferendis possimus alias, molestiae aliquid exercitationem, asperiores eaque corporis ab. Odio voluptates iste enim natus deserunt! Ad, inventore sint.
-    Porro aut odio omnis soluta ducimus molestiae inventore debitis eos velit dolorum blanditiis vitae nam expedita eveniet id a consequatur, aperiam excepturi. Porro autem laudantium quod sit nobis, soluta excepturi.
-    Ipsa consequuntur accusamus sapiente dolores quis, possimus vitae repellendus accusantium? Nihil, dolorem dignissimos. Quae eius, in adipisci sed eveniet atque iure recusandae unde veritatis mollitia expedita quo iste delectus sunt.
-    Animi numquam culpa, ut recusandae eligendi omnis facilis perspiciatis dolore soluta officiis eos necessitatibus. Ipsum dolores saepe esse eaque eligendi animi alias vel dolore voluptatem voluptatibus, eveniet similique impedit rerum.
-    Rerum ipsum incidunt eligendi vel ea facilis excepturi maiores quasi omnis eaque vero corporis ab ducimus accusamus numquam modi, alias provident soluta eum nesciunt id saepe harum distinctio quidem? Iusto.
+   
 </body>
 </html>
