--- a/templates/footer.html
+++ b/templates/footer.html
@@ -74,8 +74,7 @@
             </div>
             <div>
                 <p>College Route Map:</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31720.214517122796!2d83.3162456!3d17.7240095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a3be6a2f2458af5%3A0x31865f527a15b2b2!2sGayatri%20Vidya%20Parishad%20College%20for%20Degree%20and%20P.G.%20Courses%20%28Autonomous%29!5e0!3m2!1sen!2sin!4v1626197939601!5m2!1sen!2sin" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7598.601122244713!2d83.37509320000001!3d17.777566000000007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a395b1c4627825b%3A0xaef3bdc65b34e6d5!2sGayatri%20Vidya%20Parishad%20College%20for%20Degree%20%26%20P.G.%20Courses!5e0!3m2!1sen!2sin!4v1722597536365!5m2!1sen!2sin" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div>
             <div>
                 <p>GET IN TOUCH:</p>
                 <p>Email: <a href="mailto:principalgvpcdpgc.edu.in">principalgvpcdpgca@gmail.com</a></p>
