--- a/templates/nav.html
+++ b/templates/nav.html
@@ -216,17 +216,19 @@
         </div>
         <ul class="main-link">
             
-            <li><a href="#"><span class="material-symbols-outlined">home</span></a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Administration<span class="material-symbols-outlined">keyboard_arrow_down</span></a>
+            <li><a href="../index.html"><span class="material-symbols-outlined">home</span></a></li>
+            <li><a href="./404">About</a></li>
+            <li><a href="../Adminstration/administration.html">Administration<span class="material-symbols-outlined">keyboard_arrow_down</span></a>
                 <ul>
-                    <li><a href="#">Administrators</a></li>
-                    <li><a href="#">Directors</a></li>
-                    <li><a href="#">Deans</a></li>
-                    <li><a href="#">Controers</a></li>
-                    <li><a href="#">HOD's</a></li>
-                    <li><a href="#">Coordinators</a></li>
-                    <li><a href="#">Governing bodies</a></li>
+                    <li><a href="../Adminstration/administration.html">Administrators</a></li>
+                    <li><a href="../Adminstration/adm-directors.html">Directors</a></li>
+                    <li><a href="../Adminstration/administration.html/#deans">Deans</a></li>
+                    <li><a href="../Adminstration/administration.html/#controllers">Controllers</a></li>
+                    <li><a href="../Adminstration/administration.html/#hod-pg">PG HOD's</a></li>
+                    <li><a href="../Adminstration/administration.html/#hod-ET">PG HOD's</a></li>
+                    <li><a href="../Adminstration/administration.html/#hod-ug">UG HOD's</a></li>
+                    <li><a href="../Adminstration/administration.html/#COORDINATORS">Coordinators</a></li>
+                    <li><a href="../Adminstration/administration.html/">Governing bodies</a></li>
                 </ul>
             </li>
             <li><a href="#">Academics<span class="material-symbols-outlined">keyboard_arrow_down</span></a>
