--- a/Adminstration/administration.css
+++ b/Adminstration/administration.css
@@ -28,8 +28,17 @@ font-family: Arial, sans-serif;
 width: 100%;
 /* margin: 50px auto; */
 }
+header{
+    background-image: url("https://www.gvpcdpgc.edu.in/latest_images/21.jpeg");
+    width: 100%;
+    height: 45vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
+    background-blend-mode: screen;
+}
 .container{
-width: 90%;
+width: 100%;
 margin: auto;
 }
 .heading{
@@ -44,7 +53,6 @@ padding: 10px;
 
 }
 .view a{
-
 justify-content: end;
 border: 1px solid #22316d76;
 border-radius: 5px;
@@ -91,13 +99,13 @@ padding: 1px;
 width: 282px;
 height: 320px;
 box-sizing: border-box;
-border: 1px solid;
+/* border: 1px solid; */
 border-radius: 5px;
 box-shadow: 2px 2px 2px  rgba(0, 0, 0, 0.329);
 transition: 0.5s;
 margin-top: 25px;
 justify-content: space-between;
-/* margin: 0 12px 0 10px; */
+transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .card img{
@@ -133,9 +141,8 @@ margin-left: 45px ;
 .intro{
 font-size: 13px;
 margin: 5px 0;
-display: flex;
+display: none;
 color: #100707;
-visibility: hidden;
 opacity: 0;
 transition: opacity 0.5s;
 
@@ -155,6 +162,11 @@ color: #fff;
 }
 .intro p{
 padding: 5px;
+}
+.card:hover{
+    transform: translateY(-10px); /* Slightly raise the card */
+
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25);
 }
 .card:hover,.details:hover {
 cursor: pointer;
@@ -186,7 +198,7 @@ transform: scale(0.4);
 .card:hover .intro  {
 opacity: 1;
 margin-top: -70px;
-visibility: visible;
+display: flex;
 padding: 5px;
 
 }
