--- a/templates/nav.html
+++ b/templates/nav.html
@@ -222,13 +222,13 @@
                 <ul>
                     <li><a href="../Adminstration/administration.html">Administrators</a></li>
                     <li><a href="../Adminstration/adm-directors.html">Directors</a></li>
-                    <li><a href="../Adminstration/administration.html/#deans">Deans</a></li>
-                    <li><a href="../Adminstration/administration.html/#controllers">Controllers</a></li>
-                    <li><a href="../Adminstration/administration.html/#hod-pg">PG HOD's</a></li>
-                    <li><a href="../Adminstration/administration.html/#hod-ET">PG HOD's</a></li>
-                    <li><a href="../Adminstration/administration.html/#hod-ug">UG HOD's</a></li>
-                    <li><a href="../Adminstration/administration.html/#COORDINATORS">Coordinators</a></li>
-                    <li><a href="../Adminstration/administration.html/">Governing bodies</a></li>
+                    <li><a href="../Adminstration/administration.html#deans">Deans</a></li>
+                    <li><a href="../Adminstration/administration.html#controllers">Controllers</a></li>
+                    <li><a href="../Adminstration/administration.html#hod-pg">PG HOD's</a></li>
+                    <li><a href="../Adminstration/administration.html#hod-ET">E&T HOD's</a></li>
+                    <li><a href="../Adminstration/administration.html#hod-ug">UG HOD's</a></li>
+                    <li><a href="../Adminstration/administration.html#COORDINATORS">Coordinators</a></li>
+                    <li><a href="../Adminstration/administration.html">Governing bodies</a></li>
                 </ul>
             </li>
             <li><a href="#">Academics<span class="material-symbols-outlined">keyboard_arrow_down</span></a>
