code updated naac.html

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -54,23 +54,24 @@
     
     .main-nav {
         width: 100%;
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
         padding: 7px 0;
         background-color: transparent;
         z-index: 1000;
-        position: relative; /* Start as relative to scroll normally */
+        /* position: relative; Start as relative to scroll normally */
         transition: top 0.3s ease, background-color 0.3s ease;
     }
     .main-logo{
         display: none;
-        margin:0% 0% 0px 6%;
+        margin:0% 0% 0px 6vw;
         position: absolute;
         background: #22316c !important;
         border-radius: 50% !important;
-        width: 80px !important;
-        height: 80px !important;
+        width: 5vw !important;
+        height: 5vw !important;
         overflow: visible !important;
         position: absolute !important;
         top: 0px !important;
