--- a/Adminstration/administration.css
+++ b/Adminstration/administration.css
@@ -10,9 +10,11 @@ box-sizing: border-box;
 #hodpg-container,#cod-container{
 display: flex;
 flex-wrap: wrap;
-margin: 30px auto;
+margin: 5% ;
 gap: 4.5rem;
 margin-bottom: 20px;
+justify-content:start;
+align-items:start;
 }
 body {
 /* margin-left: 20px; */
@@ -21,7 +23,7 @@ align-content: space-around;
 justify-content: center;
 align-items: center;
 height: 100vh;
-background: whitesmoke;
+background: rgb(145, 133, 133);
 font-family: Arial, sans-serif;
 }
 .cards{
@@ -44,11 +46,12 @@ margin: auto;
 .heading{
 color: #22316C;
 padding: 10px;
+padding-left: 5%;
 }
  .view{
     display: flex;
     justify-content: end;
-    padding-right: 30px;
+    padding-right: 6%;
     font-size: 25px;
 
 }
@@ -67,7 +70,7 @@ color: #fff;
 opacity: 60%;
 }
 .view button {
-    padding: 3px;
+    padding: px;
     font-size: 25px;
     background-color: white;
     color: #000;
@@ -103,7 +106,7 @@ padding: 1px;
 width: 282px;
 height: 320px;
 box-sizing: border-box;
-/* border: 1px solid; */
+border: 0.5px solid #00000078;
 border-radius: 5px;
 box-shadow: 2px 2px 2px  rgba(0, 0, 0, 0.329);
 transition: 0.5s;
