--- a/templates/nav.html
+++ b/templates/nav.html
@@ -223,7 +223,7 @@
             <li><a href="../Adminstration/administration.html">Administration<span class="material-symbols-outlined">keyboard_arrow_down</span></a>
                 <ul>
                     <li><a href="../Adminstration/administration.html">Administrators</a></li>
-                    <li><a href="../Adminstration/adm-directors.html">Directors</a></li>
+                    <li><a href="../Adminstration/administration.html#director">Directors</a></li>
                     <li><a href="../Adminstration/administration.html#deans">Deans</a></li>
                     <li><a href="../Adminstration/administration.html#controllers">Controllers</a></li>
                     <li><a href="../Adminstration/administration.html#hod-pg">PG HOD's</a></li>
