--- a/templates/nav.html
+++ b/templates/nav.html
@@ -411,7 +411,7 @@
               </div> 
 
               <div class="dropdown">
-                <button class="dropbtn">
+                <button class="dropbtn">  other
                   <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
