--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,7 +6,6 @@
     * {
         margin: 0;
         font-family: "Inter", sans-serif;
-        
     }
     .mbl{
         display: none;
@@ -159,7 +158,7 @@
         margin-top: 20px;
     }
     .mbl{
-        width: 95%;
+        width: 92%;
         padding: 10px;
         background-color: #22316C;
         z-index: 1010;
@@ -321,7 +320,7 @@
 <body>
 <nav class="mbl">
     <div class="left">
-        <img src="../assects/gvplogorm.png" alt="GVPT" width="40px">
+        <a href="../index.html"><img src="../assects/gvplogorm.png" alt="GVPT" width="40px"></a>
         <P>GAYATRI VIDYA PARISHAD COLLEGE
         FOR DEGREE AND PG COURSES(A)</P>
     </div>
