--- a/templates/nav.html
+++ b/templates/nav.html
@@ -5,6 +5,10 @@
 <style>
     * {
         font-family: "Inter", sans-serif;
+        margin: 0;
+    }
+    nav{
+        margin: 0%;
     }
     .mbl{
         display: none;
@@ -316,7 +320,7 @@
    
 </style>
 </head>
-<body>
+<body style="margin: 0%; ">
 <nav class="mbl">
     <div class="left">
         <a href="../index.html"><img src="../assects/gvplogorm.png" alt="GVPT" width="40px"></a>
@@ -437,7 +441,7 @@
         <span  onclick="openNav()">&#9776; </span>
     </div>
 </nav>
-<nav class="desk">
+<nav class="desk" style="margin: 0%;">
     <!-- Your navigation content here -->
     <div class="nav1" style="color: #fff;">
         <div class="right" style="width: 60%;margin-left: 5%;">
@@ -481,7 +485,7 @@
         </div>
     </div>
     <div class="main-nav">
-        <div>
+        <div >
             <img class="main-logo" src="../assects/gvplogorm.png" srcset alt="gayatri_logo" >
         </div>
         <ul class="main-link">
